--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -227,10 +227,16 @@ featureFlags:
           onVariation: "20"
           offVariation: "7"
         state: "off"
+        rules:
+        - priority: 0
+          serve:
+            serveVariation: "20"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - FlagsTeam
         targetRules:
-        - targets:
-          - identifier: bootcamp
-          variation: "15"
         - targets:
           - identifier: Blackrock
           variation: "7"
@@ -240,6 +246,9 @@ featureFlags:
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
+        - targets:
+          - identifier: bootcamp
+          variation: "15"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -250,6 +259,15 @@ featureFlags:
           onVariation: "20"
           offVariation: "7"
         state: "off"
+        rules:
+        - priority: 0
+          serve:
+            serveVariation: "20"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - betasegment
         targetRules:
         - targetGroups:
           - identifier: betasegment
@@ -304,6 +322,15 @@ featureFlags:
           onVariation: "20"
           offVariation: "7"
         state: "off"
+        rules:
+        - priority: 0
+          serve:
+            serveVariation: "7"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - davegroup
         targetRules:
         - targetGroups:
           - identifier: davegroup
@@ -353,6 +380,15 @@ featureFlags:
           onVariation: "true"
           offVariation: "false"
         state: "on"
+        rules:
+        - priority: 0
+          serve:
+            serveVariation: "false"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - betasegment
         targetRules:
         - targetGroups:
           - identifier: betasegment
@@ -541,6 +577,15 @@ featureFlags:
           onVariation: "14"
           offVariation: "7"
         state: "on"
+        rules:
+        - priority: 0
+          serve:
+            serveVariation: "21"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - VIPs_in_USA
         targetRules:
         - targetGroups:
           - identifier: VIPs_in_USA
@@ -640,13 +685,22 @@ featureFlags:
           onVariation: "20"
           offVariation: "7"
         state: "on"
+        rules:
+        - priority: 0
+          serve:
+            serveVariation: "60"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - FlagsTeam
         targetRules:
-        - targets:
-          - identifier: Blackrock
-          variation: "20"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "60"
+        - targets:
+          - identifier: Blackrock
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "30"
@@ -737,8 +791,16 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         rules:
+        - priority: 0
+          serve:
+            serveVariation: "true"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - bootcamp
         - priority: 1
           serve:
             serveVariation: "true"
@@ -841,6 +903,15 @@ featureFlags:
           onVariation: "false"
           offVariation: "false"
         state: "off"
+        rules:
+        - priority: 0
+          serve:
+            serveVariation: "true"
+          clauses:
+          - attribute: ""
+            op: segmentMatch
+            values:
+            - Group1
         targetRules:
         - targetGroups:
           - identifier: Group1
