--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -238,6 +238,9 @@ featureFlags:
             - FlagsTeam
         targetRules:
         - targets:
+          - identifier: bootcamp
+          variation: "15"
+        - targets:
           - identifier: Blackrock
           variation: "7"
         - targets:
@@ -246,9 +249,6 @@ featureFlags:
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
-        - targets:
-          - identifier: bootcamp
-          variation: "15"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -791,7 +791,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         rules:
         - priority: 0
           serve:
@@ -824,17 +824,17 @@ featureFlags:
             values:
             - FlagsTeam
         targetRules:
+        - targets:
+          - identifier: norm
+          - identifier: __global__cf_target
+          - identifier: Fiserv
+          variation: "false"
         - targetGroups:
           - identifier: bootcamp
           targets:
           - identifier: Experian
           - identifier: Harness
           variation: "true"
-        - targets:
-          - identifier: norm
-          - identifier: __global__cf_target
-          - identifier: Fiserv
-          variation: "false"
       - identifier: Prod
         default:
           onVariation: "true"
