--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -238,17 +238,17 @@ featureFlags:
             - FlagsTeam
         targetRules:
         - targets:
-          - identifier: harness
-          variation: "90"
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
-        - targets:
           - identifier: bootcamp
           variation: "15"
         - targets:
           - identifier: Blackrock
           variation: "7"
+        - targets:
+          - identifier: harness
+          variation: "90"
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -791,7 +791,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         rules:
         - priority: 0
           serve:
