--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -248,14 +248,14 @@ featureFlags:
             - FlagsTeam
         targetRules:
         - targets:
+          - identifier: harness
+          variation: "90"
+        - targets:
           - identifier: bootcamp
           variation: "15"
         - targets:
           - identifier: Blackrock
           variation: "7"
-        - targets:
-          - identifier: harness
-          variation: "90"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
@@ -826,7 +826,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 0
           serve:
