--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -248,14 +248,14 @@ featureFlags:
             - FlagsTeam
         targetRules:
         - targets:
-          - identifier: harness
-          variation: "90"
-        - targets:
           - identifier: bootcamp
           variation: "15"
         - targets:
           - identifier: Blackrock
           variation: "7"
+        - targets:
+          - identifier: harness
+          variation: "90"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
@@ -826,7 +826,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         rules:
         - priority: 0
           serve:
@@ -859,17 +859,17 @@ featureFlags:
             values:
             - FlagsTeam
         targetRules:
-        - targets:
-          - identifier: norm
-          - identifier: __global__cf_target
-          - identifier: Fiserv
-          variation: "false"
         - targetGroups:
           - identifier: bootcamp
           targets:
           - identifier: Experian
           - identifier: Harness
           variation: "true"
+        - targets:
+          - identifier: norm
+          - identifier: __global__cf_target
+          - identifier: Fiserv
+          variation: "false"
       - identifier: Prod
         default:
           onVariation: "true"
