--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -247,18 +247,18 @@ featureFlags:
             values:
             - FlagsTeam
         targetRules:
-        - targets:
-          - identifier: Blackrock
-          variation: "7"
-        - targets:
-          - identifier: harness
-          variation: "90"
         - targetGroups:
           - identifier: FlagsTeam
           variation: "20"
         - targets:
           - identifier: bootcamp
           variation: "15"
+        - targets:
+          - identifier: Blackrock
+          variation: "7"
+        - targets:
+          - identifier: harness
+          variation: "90"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -826,7 +826,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
         rules:
         - priority: 0
           serve:
