--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -247,9 +247,6 @@ featureFlags:
             values:
             - FlagsTeam
         targetRules:
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
         - targets:
           - identifier: bootcamp
           variation: "15"
@@ -259,6 +256,9 @@ featureFlags:
         - targets:
           - identifier: harness
           variation: "90"
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -1493,7 +1493,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "off"
+        state: "on"
       - identifier: Prod
         default:
           onVariation: "true"
