--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -25,7 +25,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
       - identifier: Prod
         default:
           onVariation: "true"
@@ -346,15 +346,15 @@ featureFlags:
         - targets:
           - identifier: harness
           variation: "90"
+        - targetGroups:
+          - identifier: FlagsTeam
+          variation: "20"
         - targets:
           - identifier: bootcamp
           variation: "15"
         - targets:
           - identifier: Blackrock
           variation: "7"
-        - targetGroups:
-          - identifier: FlagsTeam
-          variation: "20"
       - identifier: Prod
         default:
           onVariation: "20"
