--- a/reposyncname/.harness/flags.yaml
+++ b/reposyncname/.harness/flags.yaml
@@ -347,14 +347,14 @@ featureFlags:
           - identifier: FlagsTeam
           variation: "20"
         - targets:
-          - identifier: Blackrock
-          variation: "7"
-        - targets:
           - identifier: harness
           variation: "90"
         - targets:
           - identifier: bootcamp
           variation: "15"
+        - targets:
+          - identifier: Blackrock
+          variation: "7"
       - identifier: Prod
         default:
           onVariation: "20"
@@ -922,7 +922,7 @@ featureFlags:
         default:
           onVariation: "true"
           offVariation: "false"
-        state: "on"
+        state: "off"
         rules:
         - priority: 0
           serve:
